RESOLVED FIXED139084
Fix a build warning when CSS_SCROLL_SNAP is enabled
https://bugs.webkit.org/show_bug.cgi?id=139084
Summary Fix a build warning when CSS_SCROLL_SNAP is enabled
Gyuyoung Kim
Reported 2014-11-27 22:41:49 PST
There is a build warning when CSS_SCROLL_SNAP is enabled on EFL port. This warning comes that base class ctor of StyleScrollSnapPoints class is not initialized explicitly. ../../Source/WebCore/rendering/style/StyleScrollSnapPoints.cpp:58:8: error: base class ‘class WTF::RefCounted<WebCore::StyleScrollSnapPoints>’ should be explicitly initialized in the copy constructor [-Werror=extra] inline StyleScrollSnapPoints::StyleScrollSnapPoints(const StyleScrollSnapPoints& other) ^
Attachments
Patch (1.56 KB, patch)
2014-11-27 22:46 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2014-11-27 22:46:14 PST
Andrei Bucur
Comment 2 2014-11-29 09:10:33 PST
Comment on attachment 242261 [details] Patch r=me
WebKit Commit Bot
Comment 3 2014-11-29 18:36:03 PST
Comment on attachment 242261 [details] Patch Clearing flags on attachment: 242261 Committed r176585: <http://trac.webkit.org/changeset/176585>
WebKit Commit Bot
Comment 4 2014-11-29 18:36:07 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.