Fix a build warning when CSS_SCROLL_SNAP is enabled https://bugs.webkit.org/show_bug.cgi?id=139084

Reviewed by Andrei Bucur.

Fix a build warning. Copy constructor of StyleScrollSnapPoints should initialize its base class.

* rendering/style/StyleScrollSnapPoints.cpp:
(WebCore::StyleScrollSnapPoints::StyleScrollSnapPoints): Call RefCounted().


Canonical link: https://commits.webkit.org/156964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176585 268f45cc-cd09-0410-ab3c-d52691b4dbfc